Responsive fixes etc.

--- a/src/assets/css/bluecollar/flex-utils.scss
+++ b/src/assets/css/bluecollar/flex-utils.scss
@@ -84,7 +84,7 @@
   }
 
   .sm-md-flex-basis-third,
-  .sm-fmd-lex-basis-333 {
+  .sm-md-flex-basis-333 {
     flex-basis: 33.33333%;
   }
 
@@ -94,7 +94,7 @@
   }
 }
 
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 52em) {
   .md-flex-basis-full,
   .md-flex-basis-100 {
     flex-basis: 100%;
@@ -249,7 +249,7 @@
   .xs-flex-end { align-items: flex-end }
 }
 
-@media screen and (min-width: 52.06em) {
+@media screen and (min-width: 40em) {
   .sm-inline-flex { display: inline-flex; }
   .sm-flex-column { flex-direction: column }
   .sm-flex-wrap { flex-wrap: wrap }
@@ -265,4 +265,60 @@
   .sm-flex-stretch { align-items: stretch }
   .sm-flex-start { align-items: flex-start }
   .sm-flex-end { align-items: flex-end }
+}
+
+
+@media screen and (min-width: 52.06em) {
+  .lg-inline-flex { display: inline-flex; }
+  .lg-flex-column { flex-direction: column }
+  .lg-flex-wrap { flex-wrap: wrap }
+  .lg-flex-center { align-items: center }
+  .lg-flex-justify { justify-content: space-around }
+  .lg-flex-justify-stretch { justify-content: stretch }
+  .lg-flex-justify-center { justify-content: center }
+  .lg-flex-justify-end { justify-content: flex-end }
+  .lg-flex-justify-between { justify-content: space-between }
+  .lg-flex-baseline { align-items: baseline }
+  /*.lg-flex-around { align-items: space-around }
+  .lg-flex-between { align-items: space-between }*/
+  .lg-flex-stretch { align-items: stretch }
+  .lg-flex-start { align-items: flex-start }
+  .lg-flex-end { align-items: flex-end }
+}
+
+@media screen and (min-width: 84em) {
+  .md-inline-flex { display: inline-flex; }
+  .md-flex-column { flex-direction: column }
+  .md-flex-wrap { flex-wrap: wrap }
+  .md-flex-center { align-items: center }
+  .md-flex-justify { justify-content: space-around }
+  .md-flex-justify-stretch { justify-content: stretch }
+  .md-flex-justify-center { justify-content: center }
+  .md-flex-justify-end { justify-content: flex-end }
+  .md-flex-justify-between { justify-content: space-between }
+  .md-flex-baseline { align-items: baseline }
+  /*.md-flex-around { align-items: space-around }
+  .md-flex-between { align-items: space-between }*/
+  .md-flex-stretch { align-items: stretch }
+  .md-flex-start { align-items: flex-start }
+  .md-flex-end { align-items: flex-end }
+}
+
+
+@media screen and (min-width: 102em) {
+  .xl-inline-flex { display: inline-flex; }
+  .xl-flex-column { flex-direction: column }
+  .xl-flex-wrap { flex-wrap: wrap }
+  .xl-flex-center { align-items: center }
+  .xl-flex-justify { justify-content: space-around }
+  .xl-flex-justify-stretch { justify-content: stretch }
+  .xl-flex-justify-center { justify-content: center }
+  .xl-flex-justify-end { justify-content: flex-end }
+  .xl-flex-justify-between { justify-content: space-between }
+  .xl-flex-baseline { align-items: baseline }
+  /*.xl-flex-around { align-items: space-around }
+  .xl-flex-between { align-items: space-between }*/
+  .xl-flex-stretch { align-items: stretch }
+  .xl-flex-start { align-items: flex-start }
+  .xl-flex-end { align-items: flex-end }
 }
