Tweak testimonial layouts.

--- a/src/assets/css/temp.scss
+++ b/src/assets/css/temp.scss
@@ -1,36 +1,36 @@
 img.circle {
-  width: 250px;
-  height: 250px;
+  width: 125px;
+  height: 125px;
   -o-object-fit: cover;
   max-width: none;
   object-fit: cover;
 }
 
 .circle-composite {
-  width: 275px;
-  height: 275px;
+  width: 137.5px;
+  height: 137.5px;
 
   .inner-circle {
     position: relative;
-    top: 25px;
+    top: 12.5px;
   }
 
   .dark-blue-circle-mask {
-    width: 225px;
-    height: 275px;
+    width: 112.5px;
+    height: 137.5px;
     overflow: hidden;
     position: absolute;
   }
 
   .dark-blue-circle {
-    width: 275px;
-    height: 260px;
+    width: 137.5px;
+    height: 130px;
     border-radius: 58% 50% 55% 50%;
     background-color: #005593;
     background-image: linear-gradient(to top right, #003e7c, #33587a);
     z-index: 2;
     position: relative;
-    left: 3px;
+    left: 1.5px;
     top: 0;
   }
 
@@ -46,8 +46,8 @@ img.circle {
   }
 
   .blue-circle {
-    width: 250px;
-    height: 250px;
+    width: 125px;
+    height: 125px;
     border-radius: 50%;
     background-color: #00a1df;
     position: absolute;
@@ -55,8 +55,8 @@ img.circle {
   }
 
   .white-circle {
-    width: 250px;
-    height: 250px;
+    width: 125px;
+    height: 125px;
     border-radius: 50%;
     background-color: white;
     position: absolute;
@@ -64,8 +64,8 @@ img.circle {
   }
 
   .limegreen-circle {
-    width: 250px;
-    height: 250px;
+    width: 125px;
+    height: 125px;
     border-radius: 50%;
     background-color: #5ed65c;
     position: absolute;
@@ -74,10 +74,15 @@ img.circle {
 
   img.circle {
     z-index: 5;
-    left: 10px;
+    left: 5px;
     bottom: 0;
     float: left;
     position: relative;
+  }
+
+  &.small {
+    width: 137.5px;
+    height: 137.5px;
   }
 }
 
