Add denim pattern.

--- a/src/assets/css/temp.scss
+++ b/src/assets/css/temp.scss
@@ -90,3 +90,14 @@ img.circle {
 .img-whiteify {
   filter: grayscale(1) brightness(0) invert(1);
 }
+
+.intro.bg-bc-blue,
+.hero-section.bg-bc-blue {
+  background-image: url(/images/denim-texture.jpg) !important;
+  background-repeat: repeat !important;
+  background-size: 300px 300px !important;
+}
+
+.homepage-hero.hero-section {
+  border-bottom: 2px solid white;
+}
