--- a/src/assets/css/temp.scss
+++ b/src/assets/css/temp.scss
@@ -101,3 +101,14 @@ img.circle {
 .homepage-hero.hero-section {
   border-bottom: 2px solid white;
 }
+
+#services {
+  min-height: 120vh;
+}
+
+@media screen and (max-width: 40em) {
+  .homepage-hero-main h1 {
+    margin-top: 50px;
+  }
+}
+
