--- a/src/assets/css/temp.scss
+++ b/src/assets/css/temp.scss
@@ -107,8 +107,12 @@ img.circle {
 }
 
 @media screen and (max-width: 40em) {
-  .homepage-hero-main h1 {
-    margin-top: 50px;
+  .homepage-hero-main .video-banner {
+    justify-content: flex-start !important;
+
+    h1 {
+      margin-top: 70px;
+    }
   }
 }
 
