--- a/src/assets/css/temp.scss
+++ b/src/assets/css/temp.scss
@@ -106,6 +106,14 @@ img.circle {
   min-height: 120vh;
 }
 
+.bg-inset:before {
+  box-shadow: 0 0 30px inset rgba(16,16,16,0.6);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: '';
+}
+
 @media screen and (max-width: 40em) {
   .homepage-hero-main .video-banner {
     justify-content: flex-start !important;
@@ -120,3 +128,40 @@ img.circle {
   }
 }
 
+form {
+  width: 100%;
+}
+
+#message,
+.message-wrapper {
+  width: 100%;
+}
+
+#message {
+  height: 20rem;
+}
+
+.message-wrapper.ampstart-input {
+  width: 100% !important;
+}
+
+/* TODO: make an alternate form input style for ampstart-inputs */
+.ampstart-input > textarea, .ampstart-input > select, .ampstart-input > input,
+input[type=text], input[type=date], input[type=datetime], input[type=datetime-local],
+input[type=email], input[type=month], input[type=number], input[type=password],
+input[type=search], input[type=tel], input[type=time], input[type=url], input[type=week] {
+  border: 1px solid grey !important;
+  background: white !important;
+  padding: 0 1rem !important;
+  border-radius: 3px !important;
+}
+
+/*.ampstart-input {
+  width: 100% !important;
+}*/
+
+.ampstart-checkbox {
+  label {
+    white-space: nowrap;
+  }
+}
