Check in layout changes, want to try something...

--- a/src/assets/css/temp.scss
+++ b/src/assets/css/temp.scss
@@ -91,8 +91,8 @@ img.circle {
   filter: grayscale(1) brightness(0) invert(1);
 }
 
-.intro.bg-bc-blue,
-.hero-section.bg-bc-blue {
+.intro.bg-denim,
+.hero-section.bg-denim {
   background-image: url(/images/denim-texture.jpg) !important;
   background-repeat: repeat !important;
   background-size: 300px 300px !important;
