--- a/src/assets/css/bluecollar/theme.scss
+++ b/src/assets/css/bluecollar/theme.scss
@@ -68,6 +68,7 @@
 
 body {
   font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
   overflow-x: hidden;
 }
 
@@ -470,7 +471,7 @@ section.hero-section.text-shadow a.action-button {
   .homepage-hero li,
   .homepage-hero a:not(.action-link),
   .homepage-hero a:not(.action-button) {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
 
