--- a/src/assets/css/bass-override-vars.scss
+++ b/src/assets/css/bass-override-vars.scss
@@ -2,7 +2,8 @@
   --h1: 3rem; /* 48px */
   --h2: 2rem; /* 32px */
   --h3: 1.5rem; /* 24px */
-  --h4: 1.125rem; /*18px*/
+  /* TODO: Fix */
+  --h4: 18px; /*18px*/
   --h5: .875rem; /*14px*/
   --h6: .75rem; /*12px*/
 
