--- a/src/assets/css/bluecollar/basscss.scss
+++ b/src/assets/css/bluecollar/basscss.scss
@@ -87,13 +87,13 @@ th { vertical-align: bottom }
 td { vertical-align: top }
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  /*font-family: 'Helvetica Neue', Helvetica, sans-serif;*/
   line-height: 1.5;
   font-size: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  /*font-family: 'Helvetica Neue', Helvetica, sans-serif;*/
   font-weight: bold;
   line-height: 1.25;
   margin-top: 1em;
