--- a/src/assets/css/bluecollar/theme.scss
+++ b/src/assets/css/bluecollar/theme.scss
@@ -468,7 +468,9 @@ section.hero-section {
 }
 
 section.hero-section.text-shadow * {
-  text-shadow: 1px 0 5px rgba(0,0,0,.666);
+  &:not(input):not(select):not(checkbox):not(label):not(textarea) {
+    text-shadow: 1px 0 5px rgba(0,0,0,.666);
+  }
 }
 
 section.hero-section.text-shadow a.action-link,
