--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,7 +2,7 @@
 @import './vars';
 @import './bluecollar/style';
 
-@import './temp.scss';
+@import './temp';
 
 /* Load ampstart components after vars */
 @import './ampstart/inputs/inputs';
