New company/about page, and loads of site changes in general.

--- a/src/assets/css/bluecollar/style-colors.scss
+++ b/src/assets/css/bluecollar/style-colors.scss
@@ -43,11 +43,26 @@
   background-color: #f2f1ed;
 }
 
+.bg-midnight-blue {
+  background-color: #111822;
+  color: #fff
+}
+
+.bg-evening-blue {
+  background-color: #17283f;
+  color: #fff
+}
+
+.bg-dark-purple {
+  background-color: #431a7c;
+  color: #ffffff;
+}
+
 .bg-hero-grey {
   background-color: #f6f5f1;
 }
 
 .bg-black {
-  background-color: rgb(33,33,33) !important;
+  background-color: rgb(22,22,22) !important;
   color: #ffffff;
 }
