Add tank and background.

--- a/src/assets/css/bluecollar/style-colors.scss
+++ b/src/assets/css/bluecollar/style-colors.scss
@@ -53,6 +53,11 @@
   color: #fff
 }
 
+.bg-forest-green {
+  background-color: #090B09;
+  color: white;
+}
+
 .bg-dark-purple {
   background-color: #431a7c;
   color: #ffffff;
