--- a/src/assets/css/bluecollar/parts/footer.scss
+++ b/src/assets/css/bluecollar/parts/footer.scss
@@ -1,6 +1,5 @@
 footer {
-  padding: 1rem 2rem;
-  background: black;
+
 }
 
 footer a {
@@ -19,13 +18,10 @@ footer {
   height: 78vh;
   bottom: 0;
   left: 0;
-  z-index: 1 !important;
   box-sizing: border-box;
-}
-
-footer {
-  position: relative;
-  z-index: 10;
+  padding: 1rem 2rem;
+  background: rgb(22,22,22);
+  z-index: 0;
 }
 
 @media screen and (max-width: 40em) {
